# AIProject

./: FuzzyCarAI.sln  assetreferences.txt
FuzzyCarAI/: AICar.fis  CMakeLists.txt  FuzzyCarAI.vcxproj  FuzzyCarAI.vcxproj.filters  FuzzyCarAIConfig.h.in  Game.cpp  Game.h  Input.cpp  Input.h  Source.cpp  Sprite.cpp  Sprite.h  StaticSprite.cpp  StaticSprite.h  finiteTestData.csv  fuzzyTestData.csv
FuzzyCarAI/cmake/: CMakeCache.txt
FuzzyCarAI/cmake/&{PROJECT_BINARY_DIR}/: FuzzyCarAIConfig.h
lib/: fuzzylite.lib
